# siphonserver

./: .gitignore  README.md  design_spec.md  pyproject.toml
app/: main.py
app/api/: requests.py  responses.py
app/services/: batch_runner.py
app/utils/: logging_config.py
client/: sample.txt  siphonclient.py
enrich/: enrich.py  generate_description.py  generate_summary.py  generate_title.py  notes.md  test_runner.py
eval/: analysis.py  candidate_summaries.py  design_spec.md  eval.py  timing.py  training.py
eval/needle/: needle.py  notes.md
eval/needle/prompts/: arxiv.txt  pigs.txt  transcript.txt  warcraft.txt  wolverines.txt
eval/prompts/: accuracy.jinja2  completeness.jinja2  response_classes.py
server/: main.py
server/api/: requests.py  responses.py
server/services/: async_chain.py  chain_async.py  chain_sync.py  generate_synthetic_data.py  get_status.py  sync_chain.py
server/utils/: exceptions.py  logging_config.py
src/headwater_server/: README.md
src/headwater_server/api/: conduit_server_api.py  curator_server_api.py  embeddings_server_api.py  siphon_server_api.py
src/headwater_server/conduit_service/: conduit_async.py  conduit_async_service.py  conduit_sync.py  generate_embeddings.py
src/headwater_server/curator_service/: curate.py  curator_service.py  rerank.py
src/headwater_server/curator_service/cache/: cache.py
src/headwater_server/embeddings_service/: embedding_models.json  embeddings_service.py
src/headwater_server/eval/: design_spec.md  timing.py  training.py
src/headwater_server/server/: error_handlers.py  headwater.py  headwater_server.py  logo.py  main.bak  main.py
src/headwater_server/server/services/: conduit_async.py  conduit_sync.py  generate_synthetic_data.py
src/headwater_server/services/curator_service/: curate.py  curator_service.py
src/headwater_server/services/embeddings_service/: embedding_model.py  generate_embeddings_service.py
src/headwater_server/services/siphon_service/: generate_synthetic_data.py
src/headwater_server/status_service/: get_status.py
src/siphonserver/client/: siphonclient.py
src/siphonserver/eval/: analysis.py  candidate_summaries.py  eval.py
src/siphonserver/eval/prompts/: preference.jinja2  style.jinja2
src/siphonserver/server/: logo.py  main.py
src/siphonserver/server/api/: requests.py  responses.py
src/siphonserver/server/services/: conduit_sync.py  curator.py  generate_embeddings.py  get_status.py
src/siphonserver/server/utils/: logging_config.py
tests/: test_client.py  test_embeddings.py
tests/services/: test_conduit_async.py  test_conduit_sync.py  test_curator.py  test_embeddings.py  test_siphon.py
