[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "SiphonServer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "uvicorn>=0.35.0",
]

[tool.hatch.build.targets.wheel]
include = ["*"]

[tool.uv.sources]
siphon = { path = "../siphon-project", editable = true }
database-clients = { path = "../database-clients", editable = true }
